--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.25.0",
+    "@vercel/postgres": "^0.10.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.10",
+    "openai": "^4.73.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
