--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:migrate": "node scripts/run-migrations.js"
   },
   "dependencies": {
     "@vercel/blob": "^0.25.0",
     "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^6.0.0",
     "next": "16.1.6",
     "next-auth": "^4.24.10",
     "openai": "^4.73.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
